--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -4,7 +4,6 @@ in ionic's _variables.scss file.
 
 For example, you might change some of the default colors:
 */
-
 $light: #fff !default;
 $stable: #D2D2D2 !default;
 $positive: #387ef5 !default;
@@ -19,140 +18,168 @@ $icon-font: #888 !default;
 $font-family-sans-serif: "Lora" !default;
 $font-family-light-sans-serif: "Lora" !default;
 $base-background-color: #D2D2D2 !default;
-$base-color: #363435 !default;
-// The path for our ionicons font files, relative to the built CSS in www/css
-$ionicons-font-path: "../lib/ionic/fonts" !default;
-// Include all of Ionic
+$base-color: #363435 !default; // The path for our ionicons font files, relative to the built CSS in www/css
+$ionicons-font-path: "../lib/ionic/fonts" !default; // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
+
 .ionic-body,
 body {
-    font-size: 14px;
+  font-size: 14px;
 }
+
 .menu {
-    .list {
-        a {
-            font-size: 12px;
-            font-weight: 600;
-            padding: 13px 2px 13px 14px !important;
-            color: $icon-font;
-            font-family: $font-family-sans-serif;
-            text-transform: uppercase;
-            i {
-                font-size: 18px;
-                font-weight: 400;
-                padding-right: 8px;
-                color: $icon;
-            }
-        }
+  .list {
+    a {
+      font-size: 12px;
+      font-weight: 600;
+      padding: 13px 2px 13px 14px !important;
+      color: $icon-font;
+      font-family: $font-family-sans-serif;
+      text-transform: uppercase;
+
+      i {
+        font-size: 18px;
+        font-weight: 400;
+        padding-right: 8px;
+        color: $icon;
+      }
     }
+  }
 }
+
 .bar {
-    .title {
-        font-size: 15px;
-    }
+  .title {
+    font-size: 15px;
+  }
 }
+
 .balance {
-    padding-right: 28px;
-    .label-name {
-        font-size: 13px;
-    }
-}
-ul {
-    list-style: none;
-    display: block;
-    li {
-        display: inline-block;
-    }
-}
-.my-balcont {
-    ul {
-        @extend ul;
-        text-align: center;
-    }
-    li {
-        padding: 2px 10px 10px;
-    }
-}
-.pr-button {
-    line-height: 27px;
-    min-height: 32px;
+  padding-right: 28px;
+
+  .label-name {
     font-size: 13px;
+  }
+}
+
+ul {
+  list-style: none;
+  display: block;
+
+  li {
+    display: inline-block;
+  }
+}
+
+.my-balcont {
+  ul {
+    @extend ul;
+    text-align: center;
+  }
+
+  li {
+    padding: 2px 10px 10px;
+  }
+}
+
+.pr-button {
+  line-height: 27px;
+  min-height: 32px;
+  font-size: 13px;
 }
 //.bar{
 //    .title{
 //        text-align: left;
 //    }
 //}
+
 .tb-button {
-    line-height: 38px;
-    min-height: 40px
+  line-height: 38px;
+  min-height: 40px;
 }
+
 .p20 {
-    padding-top: 20px;
+  padding-top: 20px;
 }
+
 .mt {
-    margin-top: 4px;
+  margin-top: 4px;
 }
+
 .mb {
-    margin-bottom: 0px;
+  margin-bottom: 0;
 }
+
 .image-hold {
-    position: relative;
-    height: 60px;
-    width: 60px;
-    overflow: hidden;
-    background-size: contain;
-    background-repeat: no-repeat;
-    text-align: center;
-    margin: 0 auto;
+  position: relative;
+  height: 60px;
+  width: 60px;
+  overflow: hidden;
+  background-size: contain;
+  background-repeat: no-repeat;
+  text-align: center;
+  margin: 0 auto;
 }
+
 .mt20 {
-    margin-top: 20px;
+  margin-top: 20px;
 }
+
 .incard {
-    p {
-        padding: 13px 0 6px;
-        font-size: 13px;
-    }
+  h2 {
+    text-transform: capitalize;
+    font-weight: 700;
+  }
+
+  p {
+    padding: 13px 0 6px;
+    font-size: 13px;
+  }
 }
+
 .image-modal {
-    .slider-slide {
-        height: 250px;
-        vertical-align: top;
-        top: 50%;
-        max-height: 400px;
-    }
+  .slider-slide {
+    height: 250px;
+    vertical-align: top;
+    top: 50%;
+    max-height: 400px;
+  }
 }
+
 .menus {
-    .badge {
-        padding: 2px 7px;
-        border-radius: 10px;
-        right: 8px;
-        font-size: 11px;
-    }
+  .badge {
+    padding: 2px 7px;
+    border-radius: 10px;
+    right: 8px;
+    font-size: 11px;
+  }
 }
 
 .space {
-    margin:0 10px;
-    input{
-        width: 100%;
-    }
+  margin: 0 10px;
+
+  input {
+    width: 100%;
+  }
 }
+
 .strong-tabs {
   background-color: $balanced;
+
   .tab-item {
     font-weight: bold;
     font-size: 16px;
     text-transform: uppercase;
   }
 }
+
 .div-img {
-  padding: 15px 15px 6px !important;
-  padding-left: 72px !important;
+  padding: 15px 15px 6px 72px !important;
   border-bottom: 1px solid #eaeaea !important;
+
   p {
     padding: 0;
   }
+
   .imgy {
     position: absolute;
     top: 16px;
@@ -167,6 +194,7 @@ ul {
     border: 1px solid #eaeaea;
   }
 }
+
 .brdr-select {
   .item-input input {
     border: 1px solid $balanced;
@@ -178,12 +206,29 @@ ul {
     right: 13px;
     width: 47%;
   }
+
   .item-select select {
-      width: 47%;
-      border: 1px solid $balanced;
-      border-radius: 0;
-      margin: 3px;
-      padding-right: 15px;
-      right: 10px;
+    width: 47%;
+    border: 1px solid $balanced;
+    border-radius: 0;
+    margin: 3px;
+    padding-right: 15px;
+    right: 10px;
   }
+}
+
+.incard .no-pad-for {
+  padding: 0;
+}
+
+.bod-btm {
+  border-bottom: 1px solid #ddd;
+}
+
+.pb10 {
+  padding-bottom: 10px;
+}
+
+.less-pad-home {
+  padding: 5px 0 6px;
 }
