--- a/www/templates/faq.html
+++ b/www/templates/faq.html
@@ -61,18 +61,18 @@
                         </div>
                         <div class="ans" ng-if="question==5">
                           <p>Q. Why do organization join a barter Trade Network???</p>
-                            <p>A. In a barter trade network , every member trades with everyone, even if they do not want to take back directly what the other person has to offer.
+                            <p>A. In a barter trade network , every vendor trades with everyone, even if they do not want to take back directly what the other person has to offer.
                               <br/>Trade due are credited/ debited to a trade account of the respective parties, which can then be spent on any item or service desired from within the network from time to time. </p>
                         </div>
                         <div class="ans" ng-if="question==6">
                           <p>Q. How Does SWAAP Work???</p>
-                            <p>A. SWAAP performs two basic functions for their members. SWAAP act first as, keeping accounts of members' transactions and trade balances, and secondly actively stimulate trading by brokering Products &#38; services, either finding buyers/sellers for members product and services or buying it for their own account for later sale. SWAAP is a trade exchange which works on prepaid system.
+                            <p>A. SWAAP performs two basic functions for their vendors. SWAAP act first as, keeping accounts of vendors' transactions and trade balances, and secondly actively stimulate trading by brokering Products &#38; services, either finding buyers/sellers for vendors product and services or buying it for their own account for later sale. SWAAP is a trade exchange which works on prepaid system.
                             <br>Every 1000 Cash Rupee paid to SWAAP towards transaction charges will give a excess of 10,000 Trade value for Sales and Purchases respectively.
-                            <br>For Eg. A Retail shop owners who sell clothes once become a member has to pay 1000 Rupee Cash to SWAAP to get 10,000 trade value for his Purchase/sale So a Shop owner can now go to any SWAAP member and can purchase good UPTO 10,000 trade value of his needs and will have to sell his goods up to 10000 trade value as per other member needs . Any member looking for more trade can pay in advance for his transaction charges and increase his trade value as per his needs.</p>
+                            <br>For Eg. A Retail shop owners who sell clothes once become a vendor has to pay 1000 Rupee Cash to SWAAP to get 10,000 trade value for his Purchase/sale So a Shop owner can now go to any SWAAP vendor and can purchase good UPTO 10,000 trade value of his needs and will have to sell his goods up to 10000 trade value as per other vendor needs . Any vendor looking for more trade can pay in advance for his transaction charges and increase his trade value as per his needs.</p>
                         </div>
                         <div class="ans" ng-if="question==7">
                           <p>Q. What does it process to join SWAAP ???</p>
-                            <p>A. Client has to pay Rs.15000/- as a lifetime membership fee to join SWAAP And then 5% transaction fee on each trade of purchase and sale.</p>
+                            <p>A. Client has to pay Rs.15000/- as a lifetime vendorship fee to join SWAAP And then 5% transaction fee on each trade of purchase and sale.</p>
                         </div>
                         <div class="ans" ng-if="question==8">
                           <p>Q. Are there any tax advantages to barter???</p>
@@ -136,7 +136,7 @@
                 <div class="faq-cont">
                     <p>
                         <b> Why do organization join a barter Trade Network???</b>
-                        <br/>In a barter trade network , every member trades with everyone, even if they do not want to take back directly what the other person has to offer.
+                        <br/>In a barter trade network , every vendor trades with everyone, even if they do not want to take back directly what the other person has to offer.
                         <br/>Trade due are credited/ debited to a trade account of the respective parties, which can then be spent on any item or service desired from within the network from time to time. 
                     </p>
                 </div>
@@ -144,16 +144,16 @@
                 <div class="faq-cont">
                     <p>
                         <b>How Does SWAAP Work???</b>
-                        <br/>SWAAP performs two basic functions for their members. SWAAP act first as, keeping accounts of members' transactions and trade balances, and secondly actively stimulate trading by brokering Products &#38; services, either finding buyers/sellers for members product and services or buying it for their own account for later sale. SWAAP is a trade exchange which works on prepaid system.
+                        <br/>SWAAP performs two basic functions for their vendors. SWAAP act first as, keeping accounts of vendors' transactions and trade balances, and secondly actively stimulate trading by brokering Products &#38; services, either finding buyers/sellers for vendors product and services or buying it for their own account for later sale. SWAAP is a trade exchange which works on prepaid system.
                         <br>Every 1000 Cash Rupee paid to SWAAP towards transaction charges will give a excess of 10,000 Trade value for Sales and Purchases respectively.
-                        <br>For Eg. A Retail shop owners who sell clothes once become a member has to pay 1000 Rupee Cash to SWAAP to get 10,000 trade value for his Purchase/sale So a Shop owner can now go to any SWAAP member and can purchase good UPTO 10,000 trade value of his needs and will have to sell his goods up to 10000 trade value as per other member needs . Any member looking for more trade can pay in advance for his transaction charges and increase his trade value as per his needs.
+                        <br>For Eg. A Retail shop owners who sell clothes once become a vendor has to pay 1000 Rupee Cash to SWAAP to get 10,000 trade value for his Purchase/sale So a Shop owner can now go to any SWAAP vendor and can purchase good UPTO 10,000 trade value of his needs and will have to sell his goods up to 10000 trade value as per other vendor needs . Any vendor looking for more trade can pay in advance for his transaction charges and increase his trade value as per his needs.
                     </p>
                 </div>
 
                 <div class="faq-cont">
                     <p>
                         <b>What does it process to join SWAAP ??? </b>
-                        <br/>Client has to pay Rs.15000/- as a lifetime membership fee to join SWAAP And then 5% transaction fee on each trade of purchase and sale.  
+                        <br/>Client has to pay Rs.15000/- as a lifetime vendorship fee to join SWAAP And then 5% transaction fee on each trade of purchase and sale.  
                     </p>
                 </div>
 
