--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -5,8 +5,8 @@
         </div>
         <div class="list login-mk">
             <label class="item item-input">
-                <span class="input-label">Member ID</span>
-                <input type="text" placeholder="Member ID" ng-model="user1.membershipno">
+                <span class="input-label">Vendor ID</span>
+                <input type="text" placeholder="Vendor ID" ng-model="user1.membershipno">
             </label>
             <label class="item item-input">
                 <span class="input-label">Password</span>
@@ -16,7 +16,7 @@
                 <a class="button button-block button-balanced" ng-click="onlogin(user1)" type="submit">Login</a>
             </div>
             <div class="registration pull-left" ng-click="openreg();">
-                   Become a Member?
+                   Become a Vendor?
             </div>
             <div class="registration pull-right" ng-click="showSuccessmy();">
                    Forgot Password?
