--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -6,17 +6,17 @@
         </div>
         <img src="img/main.png" class="main-png">
         <div class="buttons button-right">
-          <div class="dh-relative" ng-controller="YourBalCtrl">
-            <button class="button button-icon ln-bell small-icon btn-view" ui-sref="app.notification"></button>
-            <span class="badge badge-assertive btn-set span-abs" ng-hide="notificationCount==0"></span>
-          </div>
+            <div class="dh-relative" ng-controller="YourBalCtrl">
+                <button class="button button-icon ln-bell small-icon btn-view" ui-sref="app.notification"></button>
+                <span class="badge badge-assertive btn-set span-abs" ng-hide="notificationCount==0"></span>
+            </div>
             <button class="button button-icon ion-ios-loop-strong small-icon" ng-click="pullrefresh();"></button>
         </div>
     </ion-header-bar>
 
     <ion-content class="padding has-tabs">
         <ion-refresher pulling-text="Pull To Refresh" on-refresh="pullrefresh();" refreshing-text="Refreshing.."></ion-refresher>
-                <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" auto-play="true" ng-if="sliderImage">
+        <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" auto-play="true" ng-if="sliderImage" does-continue="true">
             <ion-slide ng-repeat="img in sliderImage">
                 <img ng-src="{{img.image | serverimage}}" class="full-image"/>
             </ion-slide>
