--- a/www/templates/popsearch.html
+++ b/www/templates/popsearch.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
     <ion-header-bar class="bar-royal" align-title="center">
-        <h1 class="title"> Membership No.</h1>
+        <h1 class="title"> Vendor No.</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closeModal()">Close</button>
         </div>
@@ -9,7 +9,7 @@
         <ion-list>
             <form class="item item-input-inset only-horizontal ">
                 <label class="item-input-wrapper ">
-                    <input type="text " placeholder="Membership No. " ng-model="m.membershipno" ng-change="doSearch(datasearch);" style="border: 0px;">
+                    <input type="text " placeholder="Vendor No. " ng-model="m.membershipno" ng-change="doSearch(datasearch);" style="border: 0px;">
                 </label>
                 <button class="button button-icon ion-search " ng-click="mid(m);" type="submit "></button>
             </form>
