--- a/www/templates/home-offline.html
+++ b/www/templates/home-offline.html
@@ -49,7 +49,7 @@
             <!--            <div class="item item-input area">-->
 
             <label class="item item-input">
-              <span class="input-label">Membership No.</span>
+              <span class="input-label">Vendor No.</span>
                 <input type="text" ng-model="home.membershipno">
             </label>
 
