--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1203,6 +1203,15 @@ a.tab-item.active-tab {
     width: 47%;
 }
 .max-width {
-  width: 670px;
+  max-width: 670px;
   margin: 0 auto;
 }
+.auto-image {
+  height: 90px;
+}
+.auto-image img {
+    max-height: 100%;
+    max-width: 100%;
+    height: auto !important;
+    width: auto;
+  }
