membership id to vendor id

--- a/www/templates/shop.html
+++ b/www/templates/shop.html
@@ -14,7 +14,7 @@
                     </div>
                 </ion-item>
                 <ion-item class="product">
-                    <h2>Membership Id</h2>
+                    <h2>Vendor Id</h2>
                     <div class="pull-right balanced amount">
                         {{profile.membershipno}}
                     </div>
