--- a/www/templates/addproducts.html
+++ b/www/templates/addproducts.html
@@ -10,6 +10,31 @@
          <form ng-submit="">
             <div class="list">
                <div class="profile-img">
+                 <!-- new code here -->
+                 <!-- <div class="row">
+                    <div class="col input-div" ng-repeat="i in image">
+                       <div class="image-hold" ng-style="{'background-image':'url({{i.photo|serverimage}})'}"  ng-click="changeproductimage(i.id);"></div>
+                       <p  class="text-center" style="background-color: #f78330;color: white;padding: 5px 0 4px;" ng-click="deleteProductsPhoto(i.id)">Delete</p>
+                    </div>
+                    <div class="col input-div" ng-if="image.length==0" ng-click="changeproductimage('');">
+                       <div class="img-profile">
+                          <img src="img/add.png">
+                          <div class="holder2">Edit</div>
+                       </div>
+                    </div>
+                    <div class="col input-div" ng-if="image.length==0 || image.length==1" ng-click="changeproductimage('');">
+                       <div class="img-profile">
+                          <img src="img/add.png">
+                          <div class="holder2">Edit</div>
+                       </div>
+                    </div>
+                    <div class="col input-div" ng-if="image.length==0 || image.length==1 ||  image.length==2" ng-click="changeproductimage('');">
+                       <div class="img-profile">
+                          <img src="img/add.png">
+                          <div class="holder2">Edit</div>
+                       </div>
+                    </div>
+                 </div> -->
                   <img ng-src={{prodimg|serverimage}}>
                   <!--                        <div class="holder">Add Image</div>-->
                   <div class="padding-horizontal text-center">
