--- a/www/templates/profile-edit.html
+++ b/www/templates/profile-edit.html
@@ -14,7 +14,7 @@
          <div class="incard">
             <form name="shopp" ng-submit="profileupdate(profile);updatecat(profile.categoryid);updatearea(profile.areaid);">
                <div class="list">
-                  <div class="profile-img">
+                  <div class="profile-img">{{isWeb}}fasd
                      <img ng-src="{{profile.shoplogo|serverimage}}">
 
                      <div class="padding-horizontal text-center">
