address ho gaya

--- a/www/templates/shop.html
+++ b/www/templates/shop.html
@@ -37,7 +37,7 @@
             </div>
             <div class="item item-text-wrap">
                 <div class="itemproducts">
-					<p> {{profile.address}} </p>
+					<p> {{profile.billingaddress}} </p>
                 </div>
             </div>
             <div class="item item-text-wrap header">
