--- a/www/templates/addproducts.html
+++ b/www/templates/addproducts.html
@@ -16,19 +16,19 @@
                        <div class="image-hold" ng-style="{'background-image':'url({{i.photo|serverimage}})'}"  ng-click="changeproductimage(i.id);"></div>
                        <p  class="text-center" style="background-color: #f78330;color: white;padding: 5px 0 4px;" ng-click="deleteProductsPhoto(i.id)">Delete</p>
                     </div> -->
-                    <div class="col input-div">
+                    <div class="col input-div"  ng-click="addproductimage('');">
                        <div class="img-profile">
                           <img src="img/add.png">
                           <div class="holder2">Edit</div>
                        </div>
                     </div>
-                    <div class="col input-div">
+                    <div class="col input-div" ng-click="addproductimage('');">
                        <div class="img-profile">
                           <img src="img/add.png">
                           <div class="holder2">Edit</div>
                        </div>
                     </div>
-                    <div class="col input-div" >
+                    <div class="col input-div" ng-click="addproductimage('');">
                        <div class="img-profile">
                           <img src="img/add.png">
                           <div class="holder2">Edit</div>
