--- a/www/templates/profile-edit.html
+++ b/www/templates/profile-edit.html
@@ -83,6 +83,8 @@
                      <div class="item item-input item-text-wrap header">
                         <h2>Shops Photos</h2>
                      </div>
+
+                     <!-- // pictures starts here -->
                      <div class="row text-center">
                         <div class="col input-div" ng-repeat="i in pic">
                            <div class="image-hold" ng-style="{'background-image':'url({{i.photo|serverimage}})'}" ng-click="changeshopimage(i.id);"></div>
@@ -107,6 +109,7 @@
                            </div>
                         </div>
                      </div>
+                        <!-- // pictures ends here -->
                   </div>
                   <div class="m20">
                      <div class="item item-input item-text-wrap header">
