--- a/www/templates/addproducts.html
+++ b/www/templates/addproducts.html
@@ -16,7 +16,7 @@
                        <div class="image-hold" ng-style="{'background-image':'url({{i.photo|serverimage}})'}"  ng-click="changeproductimage(i.id);"></div>
                        <p  class="text-center" style="background-color: #f78330;color: white;padding: 5px 0 4px;" ng-click="deleteProductsPhoto(i.id)">Delete</p>
                     </div> -->
-                    <div class="col input-div"  ng-click="addproductimage('');">
+                    <!-- <div class="col input-div"  ng-click="addproductimage('');">
                        <div class="img-profile">
                           <img src="img/add.png">
                           <div class="holder2">Edit</div>
@@ -33,13 +33,13 @@
                           <img src="img/add.png">
                           <div class="holder2">Edit</div>
                        </div>
-                    </div>
+                    </div> -->
                  </div>
 
-                  <!--                        <div class="holder">Add Image</div>-->
-                  <!-- <div class="padding-horizontal text-center">
+                                        <!-- <div class="holder">Add Image</div> -->
+             <div class="padding-horizontal text-center">
                      <button class="button button-balanced pr-button ion-plus-round" ng-click="addproductimage();"></button>
-                  </div> -->
+                  </div>
                </div>
                <div class="item item-input">
                   <input type="text" placeholder="Name" ng-model="ap.name" ng-class="allvalidation[0].validation" required>
