--- a/www/templates/productedit.html
+++ b/www/templates/productedit.html
@@ -9,11 +9,11 @@
       <div class="incard">
          <form ng-submit="">
             <div class="list prd-form">
-               <!-- <div class="profile-img">
+               <div class="profile-img">
                   <img ng-src="{{prodetails.image|serverimage}}">
-               </div> -->
-               <div class="row">
-                  <!-- <div class="col input-div" ng-repeat="img in prodetails.images" ng-click="openPop()"> -->
+               </div>
+               <!-- <div class="row">
+                  <div class="col input-div" ng-repeat="img in prodetails.images" ng-click="openPop()">
                   <div class="col input-div" ng-repeat="img in prodetails.images">
                      <div class="image-hold" ng-style="{'background-image':'url({{img.image|serverimage}})'}"></div>
                      <p  class="text-center" style="background-color: #f78330;color: white;padding: 5px 0 4px;" ng-click="deleteProductsImage(img.id)">Delete</p>
@@ -36,7 +36,10 @@
                         <div class="holder2">Edit</div>
                      </div>
                   </div>
-               </div>
+               </div> -->
+
+
+
                <div class="item item-input">
                   <span class="input-label">Name</span>
                   <input type="text" placeholder="Name" ng-model="prodetails.name" class="text-right" ng-class="allvalidation[0].validation" readonly>
