--- a/www/templates/addproducts.html
+++ b/www/templates/addproducts.html
@@ -12,10 +12,10 @@
                <div class="profile-img">
                  <!-- new code here -->
                  <div class="row">
-                    <!-- <div class="col input-div">
-                       <div class="image-hold" ng-style="{'background-image':'url({{i.photo|serverimage}})'}"  ng-click="changeproductimage(i.id);"></div>
-                       <p  class="text-center" style="background-color: #f78330;color: white;padding: 5px 0 4px;" ng-click="deleteProductsPhoto(i.id)">Delete</p>
-                    </div> -->
+                    <div class="col input-div">
+                       <div class="image-hold" ng-style="{'background-image':'url({{prodimg|serverimage}})'}"  ng-click="changeproductimage(i.id);"></div>
+                       <!-- <p  class="text-center" style="background-color: #f78330;color: white;padding: 5px 0 4px;" ng-click="deleteProductsPhoto(i.id)">Delete</p> -->
+                    </div>
                     <!-- <div class="col input-div"  ng-click="addproductimage('');">
                        <div class="img-profile">
                           <img src="img/add.png">
